# ChangeLog for dev-util/indent
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/indent/ChangeLog,v 1.6 2003/02/12 06:43:57 vapier Exp $

  04 Feb 2003; Aron Griffis <agriffis@gentoo.org> indent-2.2.6.ebuild :
  Mark stable on alpha

  16 Dec 2002; Aron Griffis <agriffis@gentoo.org> indent-2.2.6.ebuild :
  Added ~alpha to KEYWORDS

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*indent-2.2.6 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.