@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/indent
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/indent/ChangeLog,v 1.6 2003/02/12 06:43:57 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/indent/ChangeLog,v 1.7 2003/02/22 16:55:42 agriffis Exp $
+
+*indent-2.2.9 (22 Feb 2003)
+
+  22 Feb 2003; Aron Griffis <agriffis@gentoo.org> indent-2.2.9.ebuild files/digest-indent-2.2.9 :
+  Update to latest version; thanks to Michael Sterrett.
+  Closes bug #15474.
 
   04 Feb 2003; Aron Griffis <agriffis@gentoo.org> indent-2.2.6.ebuild :
   Mark stable on alpha
